# devportal-code-examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  devportal-code-examples.code-workspace
.github/workflows/: devportal-code-examples-cd.yaml  (+1 more)
projects/python-examples/: .algokit.toml  README.md  pyproject.toml  requirements.txt
projects/python-examples/.algokit/: .copier-answers.yml
projects/python-examples/.tours/: getting-started-with-your-algokit-project.tour
projects/python-examples/algokit_utils_py_examples/: algorand_client.py  helpers.py
projects/python-examples/algokit_utils_py_examples/accounts/: creating_accounts.py  funding_accounts.py  keys_and_signing.py  multisignature_accounts.py  rekeying_accounts.py
projects/python-examples/algokit_utils_py_examples/assets(ASA)/: asset_clawback.py  asset_create.py  asset_delete.py  asset_freeze.py  asset_optin_optout.py  asset_transfer.py  asset_update.py  get_asset_information.py
projects/python-examples/algokit_utils_py_examples/references/: account_app_reference.py  account_asset_reference.py  account_reference.py  app_box_reference.py  app_reference.py  asset_reference.py
projects/python-examples/algokit_utils_py_examples/transactions/: atomic_transaction_groups.py  blocks.py  fees.py  leases.py  signing_transactions.py  transaction_types.py
projects/python-examples/smart_contracts/: __main__.py
projects/python-examples/smart_contracts/arc4_types/: contract.py
projects/python-examples/smart_contracts/box_storage/: contract.py
projects/python-examples/smart_contracts/control_flow/: contract.py
projects/python-examples/smart_contracts/custom_create/: contract.py
projects/python-examples/smart_contracts/global_storage/: contract.py
projects/python-examples/smart_contracts/inner_transactions/: contract.py  deploy_config.py
projects/python-examples/smart_contracts/local_storage/: contract.py
projects/python-examples/smart_contracts/reference_account/: contract.py
projects/python-examples/smart_contracts/reference_account_app/: contract.py
projects/python-examples/tests/: arc4_types_integration_test.py  conftest.py  control_flow_integration_test.py  hello_world_integration_test.py  inner_transactions_integration_test.py  self_payment_test.py  subsidize_app_call_test.py
(+596 files in other folders)
