[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["Gabriel Kuettel <gabrielkuettel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
# TODO: update to released packages once they are available
# algorand-python = "^3.0.0"
# algorand-python-testing = "^1.0.0"
algorand-python = { git = "https://github.com/algorandfoundation/puya.git", tag = "v5.0.0-rc.14", subdirectory = "stubs" }
algorand-python-testing ={ git = "https://github.com/algorandfoundation/algorand-python-testing.git", tag = "v1.0.0-beta.7" }

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
black = {extras = ["d"], version = "*"}
ruff = "^0.9.4"
mypy = "^1"
pytest = "*"
pytest-cov = "*"
pip-audit = "*"
pre-commit = "*"
# TODO: update to released packages once they are available
# puyapy = "*"
puyapy = { git = "https://github.com/algorandfoundation/puya.git", tag = "v5.0.0-rc.14" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
lint.unfixable = ["B", "RUF"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]

[tool.mypy]
files = "smart_contracts/"
python_version = "3.12"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
extra_checks = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disable_error_code = ["misc"]
untyped_calls_exclude = ["algosdk"]
# Remove if you prefer to use mypy's default behavior against 
# untyped algosdk types
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_expr = false